[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.etl
license = Affero General Public License v3
description = A Dissect module implementing a parser for Event Trace Log (ETL) files, used by the Windows operating system to log kernel events
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
